2010-08-19  MIYAMUKO Katsuyuki

	* api/types.l (repo-public-clone-url, repo-private-clone-url)
	(repo-public-clone-url-http, repo-private-clone-url-https):
	リポジトリの URL を返すアクセッサを追加

	* api/commits.l, api/issues.l, api/network.l, api/object.l,
	api/repo.l, api/users.l: 非同期 API を追加した

	* http.l (get-response-text): 非同期実行時は HTTP ステータスが 200 番
	以外の場合でも例外は投げないようにした。
	非同期実行の場合は *Trace Output* に警告を出力し nil を返す。

	* util/function.l (tap): デバッグ用の関数。compose の途中にはさんで値を除き見る
	(funcall (compose '1+ (tap "before 1+") '*  (tap "before *")) 1 2 3)

2010-08-18  MIYAMUKO Katsuyuki

	* api/gist-unofficial.l: 非同期 API を追加した

	* util/function.l (nothing): すべての引数を無視して nil を返す関数

2010-08-16  MIYAMUKO Katsuyuki

	* api/gist.l: 非同期 API を追加した
	(list-public-gists "miyamuko"
	                   :callback #'(lambda (gists)
	                                 (msgbox "~D個のGistsがあります" (length gists))))

2010-08-13  MIYAMUKO Katsuyuki

	* (list-all-gists, list-starred-gists list-my-gists): Gist の一覧を
	取得する API を追加。
	gist 構造体のリストと次のページのページ番号を多値で返す。

	* 検索結果を保持する構造体と他の構造体で似ているスロットは
	名前などをできる限り合わせるようにした

	* 検索結果を保持する構造体名を変更
	users => searched-user
	repos => searched-repo

	* 構造体のアクセッサと API を区別しにくいので、API は動詞で
	始めるようにした。
	また、シンボル名には github- という prefix を付けないようにした。
	例) github-repos-show => show-repo

2010-08-12  MIYAMUKO Katsuyuki

	* api/network.l: JSON オブジェクトではなく構造体を返すようにした

	* api/gist-unofficial.l (gist-mine, gist-mine1): 関数名を変更
	- gist-id-list-all => gist-mine
	- gist-id-list     => gist-mine1

	* api/gist-unofficial.l (gist-revisions, gist-star-p): 関数を追加
	- gist-revisions: Gist のリビジョンの sha1 のリストを返す
	- gist-star-p: Gist にスターをつけたなら t

	* api/gist.l (gist-meta, gist-list): JSON オブジェクトではなく構造体を返すようにした

2010-08-11  MIYAMUKO Katsuyuki

	* api/repo.l, api/user.l: JSON オブジェクトではなく構造体を返すようにした

	* api/types.l: github-public-key などは repo.l と user.l から使うため、
	構造体の定義は types.l にまとめるようにした。

	* api/issues.l: JSON オブジェクトではなく構造体を返すようにした

2010-08-07  MIYAMUKO Katsuyuki

	* api/commits.l: ↓と同じ

	* api/object.l: ↓と同じ
